# gnss-imu-sync-platform

./: .gitignore  CLAUDE.md  README.md  USAGE.md  config.json  features.json  main.py  pyproject.toml  run_pipeline.py  run_web.py
data/: DATA_FORMAT.md
src/: __init__.py
src/interpolation/: gnss_interpolation.py
src/models/: __init__.py  data_types.py
src/parsers/: __init__.py  hex_parser.py  ins_parser.py  result_parser.py  result_text_parser.py
src/pipeline/: data_pipeline.py
src/sync/: __init__.py  time_sync.py
src/visualization/: plots.py
src/web/: api.py
static/: index.html
